Dependency update
Using base commit 15caf5bd3ebd