@@ -1,29 +1,30 @@
 package eu.profinit.education.flightlog.service;
 
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertSame;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.when;
+
+import java.util.List;
+import java.util.Optional;
+
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Disabled;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.AdditionalAnswers;
+import org.mockito.Mock;
+import org.mockito.junit.jupiter.MockitoExtension;
+
 import eu.profinit.education.flightlog.dao.ClubDatabaseDao;
 import eu.profinit.education.flightlog.dao.User;
 import eu.profinit.education.flightlog.domain.entities.Person;
 import eu.profinit.education.flightlog.domain.repositories.PersonRepository;
 import eu.profinit.education.flightlog.to.AddressTo;
 import eu.profinit.education.flightlog.to.PersonTo;
-import org.junit.Before;
-import org.junit.Ignore;
-import org.junit.Test;
-import org.junit.runner.RunWith;
-import org.mockito.AdditionalAnswers;
-import org.mockito.Mock;
-import org.mockito.junit.MockitoJUnitRunner;
 
-import java.util.Arrays;
-import java.util.Optional;
-
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertTrue;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.when;
-
-@RunWith(MockitoJUnitRunner.class)
-public class PersonServiceTest {
+@ExtendWith(MockitoExtension.class)
+class PersonServiceTest {
 
     @Mock
     private PersonRepository personRepository;
@@ -33,13 +34,13 @@ public class PersonServiceTest {
 
     private PersonServiceImpl testSubject;
 
-    @Before
-    public void setUp(){
+    @BeforeEach
+    public void setUp() {
         testSubject = new PersonServiceImpl(personRepository, clubDatabaseDao);
     }
 
     @Test
-    public void shouldCreateGuest() {
+    void shouldCreateGuest() {
         // prepare data
         PersonTo guestToCreate = PersonTo.builder()
             .firstName("Jan")
@@ -58,43 +59,39 @@ public class PersonServiceTest {
         Person person = testSubject.getExistingOrCreatePerson(guestToCreate);
 
         // verify results
-        assertEquals("Person type does not match", Person.Type.GUEST, person.getPersonType());
-        assertEquals("First name does not match", guestToCreate.getFirstName(), person.getFirstName());
-        assertEquals("Last name does not match", guestToCreate.getLastName(), person.getLastName());
+        assertEquals(Person.Type.GUEST, person.getPersonType(), "Person type does not match");
+        assertEquals(guestToCreate.getFirstName(), person.getFirstName(), "First name does not match");
+        assertEquals(guestToCreate.getLastName(), person.getLastName(), "Last name does not match");
 
-        assertEquals("Strear does not match", guestToCreate.getAddress().getStreet(), person.getAddress().getStreet());
+        assertEquals(guestToCreate.getAddress().getStreet(), person.getAddress().getStreet(), "Strear does not match");
 
     }
 
     @Test
-    public void shouldReturnExistingClubMember() {
+    void shouldReturnExistingClubMember() {
         // prepare data
         PersonTo existingClubMember = PersonTo.builder()
             .memberId(2L)
             .build();
 
-        User testUser = new User(2L, "Kamila", "Spoustová", Arrays.asList("PILOT"));
+        User testUser = new User(2L, "Kamila", "Spoustová", List.of("PILOT"));
         Person clubMemberFromDd = Person.builder().personType(Person.Type.CLUB_MEMBER).memberId(2L).build();
 
         // mock behaviour
         when(personRepository.findByMemberId(2L)).thenReturn(Optional.of(clubMemberFromDd));
-        when(clubDatabaseDao.getUsers()).thenReturn(Arrays.asList(testUser));
-
+        when(clubDatabaseDao.getUsers()).thenReturn(List.of(testUser));
 
         // call tested method
         Person person = testSubject.getExistingOrCreatePerson(existingClubMember);
 
         // verify results
-        assertTrue("Should return prepared instance", clubMemberFromDd == person);
-
+        assertSame(clubMemberFromDd, person, "Should return prepared instance");
     }
 
-    @Ignore("Test is not implemented")
+    @Disabled("Test is not implemented")
     @Test
-    public void shouldCreateNewClubMember() {
+    void shouldCreateNewClubMember() {
         // TODO 7.1: Naimplementujte unit test s pouzitim mocku
-
     }
-
 
 }
